[package]
name = "discourse-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.1", features = ["headers"]}
tokio = {version = "1.21.1", features = ["full"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time", "time"] }
hyper = { version = "0.14", features = ["full"] }
oauth2 = "4.1"
iter_tools="0.1.4"
chrono = "0.4"

async-graphql="4.0.13"
async-graphql-axum="4.0.13"
slab = "0.4.2"
